[gd_scene format=3 uid="uid://clgs37fgilp84"]

[ext_resource type="Script" uid="uid://clmie6bbel3r4" path="res://components/delete_confirmation.gd" id="1_isanq"]

[node name="DeleteConfirmation" type="PanelContainer" unique_id=1257494744 node_paths=PackedStringArray("cancel_button", "delete_button", "entry_name", "entry_user", "vault_name")]
custom_minimum_size = Vector2(450, 0)
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_type_variation = &"PrimaryPanel"
script = ExtResource("1_isanq")
cancel_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/CancelButton")
delete_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/DeleteButton")
entry_name = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/EntryName")
entry_user = NodePath("MarginContainer/VBoxContainer/EntryUser")
vault_name = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/VaultName")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1184291525]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1208300331]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=726489985]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Delete Entry"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer" unique_id=1619655192]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer" unique_id=510380022]
layout_mode = 2
theme_type_variation = &"LabelThin"
text = "Are you sure you want to delete the following entry?"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer" unique_id=450077486]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1308473220]
layout_mode = 2

[node name="EntryName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1341018385]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Auth"

[node name="VaultName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=983981224]
self_modulate = Color(1, 1, 1, 0.2627451)
layout_mode = 2
theme_type_variation = &"LabelThin"
theme_override_font_sizes/font_size = 12
text = "(Vault Name)"
horizontal_alignment = 1

[node name="EntryUser" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1406153676]
layout_mode = 2
theme_type_variation = &"LabelSecondary"
theme_override_font_sizes/font_size = 14
text = "auth@gmail.com"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer" unique_id=588096374]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=59794381]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=331663233]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"SecondaryButton"
theme_override_font_sizes/font_size = 16
text = "Cancel"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=71392949]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"DangerButton"
theme_override_font_sizes/font_size = 16
text = "Delete"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
